...
                  elements= List.generate(history.length, (index) => HistoryItemCard(history[index], widget.tabController) );

                  int totalElements = 0;
                  totalElements = hModel.history.length > elements.length ? elements.length+1 : elements.length;
                
                  return elements.isEmpty ? 
                    Center(child: Text('welcomeHistory'.tr(), textAlign: TextAlign.center)):
                    ListView.builder(
                      key: _listViewKey,
                      controller: _listScrollCtrl,
                      itemCount: totalElements,
                      itemBuilder: (context, index){
                        return elements[index];
...
