...
                  padding: const EdgeInsets.all(4),
                  child: Row(
                    mainAxisSize: MainAxisSize.min,
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      ElevatedButton.icon(
                        key: const Key('searchBtn'),
                        icon: const Icon(Icons.search), 
                        label: Text('searchBtn'.tr()),
                        onPressed: doSearch, 
                      ),
                      IconButton(
                        onPressed: resetSearch, 
...
