...
                        padding: const EdgeInsets.symmetric(horizontal: 8), 
                        child: Divider(color: Theme.of(context).colorScheme.primary, thickness: 3,)
                      ),

                      elements.isEmpty ? 
                      Expanded(child:
                        Center(child: Text( sModel.isBusy? 'searching'.tr() : 'welcomeSearch'.tr(), textAlign: TextAlign.center))
                      ) 
                      :
                      Expanded( 
                        child: ListView(
                          children: [
                            // Can't use orientation builder here cause it gives the orientation of the
...
